--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-    themes: light --default, night --prefersdark;
+    themes: synthwave --default, night --prefersdark;
+
   }
   /* You can add global styles to this file, and also import other style files */
